# myhttpserver

./: .gitignore  .gitmodules  AGENTS.md  FileCache.py  README.md  agent.md  config.py  config.toml  config_model.py  debug_server.py  handlers.py  html  http_date.py  main.py  main2.py  pyproject.toml  server.crt  server.key  utils.py
.github/workflows/: build-wheel.yml  generate-cfg-pdf.yml  pytest.yml
config/: example.hcl
doc/: rfc2616.txt  rfc2616_ja_claude_opus46.txt
html/: index.html
html/site1/: index.html
labs/: README.md  async_v2.py  config_model.py  example.hcl  load_hcl.py  main_ssl.py  utils.py
legacy/: analyze_git_history.py  git_analysis_report.json  thread_v2.py
script/: bench.py  generate_self_signed_cert.sh  start_server_dev.sh
scripts/: check_os_setting.sh  generate_cfg.py  generate_cfg_all_pdf.sh  sync_test_assets.sh
src/: __init__.py  main.py
src/server/: FileCache.py  __init__.py  autoindex_page.py  config_model.py  core.py  error_page.py  etag_utils.py  handlers.py  http_date.py  ip_table.py  logging_config.py  protocol.py  range_requests.py  reason_phrase.py  router.py  worker.py
template/: error_page.html.template
tests/: conftest.py  test_caching.py  test_chunked.py  test_compression.py  test_concurrency.py  test_content_negotiation.py  test_e2e.py  test_headers.py  test_http10_compat.py  test_main.py  test_methods.py  test_protocol.py  test_proxy_headers.py  test_range.py  test_routing.py  test_security.py  test_status_codes.py  test_unit_utils.py  test_utils.py
tests/advanced/: test_autoindex.py  test_caching.py  test_chunked.py  test_compression.py  test_concurrency.py  test_connection_limits.py  test_content_negotiation.py  test_http10_compat.py  test_range.py  test_response_format.py  test_routing.py  test_unit_utils.py
tests/basic/: test_e2e.py  test_headers.py  test_methods.py  test_protocol.py
