[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myhttpserver"
version = "0.2.0"
description = ""
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "pyhcl>=0.4.5",
    "uvloop>=0.22.1",
    "xxhash>=3.6.0",
    "zstandard>=0.25.0",
]

[project.scripts]
myhttpserver = "src.main:main"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "graphviz>=0.21",
    "ipdb>=0.13.13",
    "py-spy>=0.4.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "snakeviz>=2.2.2",
    "staticfg>=0.9.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
